<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_share_app"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/string_action_share"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_maps"
        android:title="Carte"
        android:orderInCategory="2"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_prefs"
        android:orderInCategory="99"
        android:title="@string/string_menu_pref"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/abc_search_hint"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_policy"
        android:title="@string/policy"
        app:showAsAction="never"/>
</menu>
