<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="false">
            </android.support.v4.view.ViewPager>



            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/spacing_medium"
                app:cardUseCompatPadding="true">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:columnCount="6"
                    android:rowCount="7">
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:layout_columnSpan="6"
                        android:layout_row="1"/>
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/project_name_text"
                        android:layout_columnSpan="3"
                        android:layout_column="0"
                        android:layout_row="2"
                        android:layout_width="wrap_content" />
                    <TextView
                        android:id="@+id/txtNomProj"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="LIB NOM PROJET"
                        android:layout_columnSpan="3"
                        android:layout_column="3"
                        android:layout_row="2"/>
                    <TextView
                        android:id="@+id/txtNbLotsLib"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="NBRE DE BIENS:"
                        android:layout_columnSpan="3"
                        android:layout_column="0"
                        android:layout_row="3"/>
                    <TextView
                        android:id="@+id/txtNbLots"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="NBRE DE LOTS:"
                        android:layout_columnSpan="3"
                        android:layout_column="3"
                        android:layout_row="3" />
                    <TextView
                        android:id="@+id/txtSurfTerrainLib"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="SURFACE DES TERRAINS:"
                        android:layout_columnSpan="3"
                        android:layout_column="0"
                        android:layout_row="4"/>
                    <TextView
                        android:id="@+id/txtSurfTerrain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="NOM DU PROJET"
                        android:layout_columnSpan="3"
                        android:layout_column="3"
                        android:layout_row="4"/>
                    <TextView
                        android:id="@+id/tvTel_lib"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/string_tel_lib"
                        android:layout_columnSpan="3"
                        android:layout_column="0"
                        android:layout_row="5"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvPhone_point_contact"
                        android:textColorLink="@color/primary"
                        android:autoLink="phone"
                        android:layout_columnSpan="3"
                        android:layout_column="3"
                        android:layout_row="5"/>
                    <Button
                        android:id="@+id/show_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_units_string"
                        app:layout_anchorGravity="bottom|end"
                        android:layout_columnSpan="2"
                        android:layout_column="0"
                        android:layout_row="6"/>
                    <Button
                        android:id="@+id/show_images"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_images_string"
                        app:layout_anchorGravity="bottom|end"
                        android:layout_columnSpan="2"
                        android:layout_column="2"
                        android:layout_row="6"/>
                    <Button
                        android:id="@+id/show_contact_ensemble"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_contact_ensemble"
                        app:layout_anchorGravity="bottom|end"
                        android:layout_columnSpan="2"
                        android:layout_column="4"
                        android:layout_row="6"/>
                </GridLayout>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/spacing_medium"
                app:cardUseCompatPadding="true">
                <TextView
                    android:id="@+id/txtEnseDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/lorem_ipsum"/>
            </android.support.v7.widget.CardView>


            <Button
                android:id="@+id/btnStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="STREET VIEW"/>
            <Button
                android:id="@+id/btnNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NAVIGUER"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cardSituation"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardElevation="@dimen/spacing_medium"
                app:cardUseCompatPadding="true">


                <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.v7.widget.CardView>
            <!--<android.support.v7.widget.CardView
                android:id="@+id/cardStreetView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardElevation="@dimen/spacing_medium"
                app:cardUseCompatPadding="true">
                <fragment
                    android:name="com.google.android.gms.maps.StreetViewPanoramaFragment"
                    android:id="@+id/streetviewpanorama"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </android.support.v7.widget.CardView>-->
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_share_black_48dp"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>